containerizing the app

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,4 +11,11 @@
     <div class="container">
     <div class="jumbotron text-center">
         <h2>FLASK APP DEPLOYED TO AWS </h4>
-    <p>This is cloud force assignment task to deploying a containerized application on AWS </p>
+    <p>This is cloud force assignment task to deploying a containerized application on AWS
+        to provision the necessary AWS services and configure them to successfully deploy and access the application.
+    </p>
+    </div>
+    </div>
+    </div>
+</body>
+</html>
